# NetFilter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Common.hpp  NetFilter.hpp  QuickFilter.hpp  main.cpp
src/filters/: FilterAlgorithms.hpp  Filters.hpp  FinalRule.hpp
tests/: CMakeLists.txt  performance.cpp  testData.hpp  testSet_basicFunctionalities.hpp  units.cpp
